--- a/requirements.txt
+++ b/requirements.txt
@@ -5,3 +5,8 @@ google-api-python-client
 google-auth-oauthlib
 google-auth-httplib2
 openpyxl
+python-dotenv
+cryptography
+pydantic
+streamlit-authenticator
+stqdm
